feat: full-segment setup on story arc beats (ATW-ushl)
Beats now carry a full segment-level setup: explicit custom team
layouts (FEUD_MEMBER role + team_number), title-on-the-line stakes,
#1 contender designation, and an optional target-show picker that
activates the dormant PLE reservation/cap machinery.

- Schema: h2 V144 / mysql V113 (team_number, is_title_segment,
  feud_script_beat_title join table)
- BeatEditor reworked around BeatEditorContext; TeamRowsEditor for
  custom layouts; champion labels on title combos; PLE cap hint
- Single-transaction createScriptWithBeats fixes wizard partial save;
  wizard validates all beats and preserves the arc name on Back
- Feud arcs (3+ wrestlers) now visible: FeudScriptListView at
  story-arcs + shared FeudScriptCard (RivalryDetailView delegates);
  auto-complete query covers feud participants (full coverage)
- Lifecycle: skipBeat (cancels PLE reservation), BOOKED marking on
  plan approval, FeudScriptCompletedEvent + inbox listener, arc
  progress header, Planned Winner/Title Stakes/Target Show columns
- Manual add-segment path completes beats; updateBeat moves target
  shows (reservation swap) and edits custom layouts/titles
- Detached-grid safety: arc queries JOIN FETCH rivalry/feud;
  Rivalry.wrestler1/2, FeudParticipant.wrestler,
  MultiWrestlerFeud.participants, beat targetShow/contenderTitle
  now EAGER (open-in-view is off)
- Fix DTO " vs " split regression in FeudScriptBeatDTO; reuse
  existing feud by name in findOrCreateFeud
- prod-sandbox.sh: source config via mktemp file — macOS /bin/bash
  3.2 reads nothing from `source <(sed ...)`
- Tests: withCaption -> withLabel (Karibu deprecation); 46 service
  tests + new feud-arc/skip/booked/custom-team coverage; full suite
  3238 green

Co-Authored-By: Claude <noreply@anthropic.com>